Aktualisierte Pictures und Endfassung Doku

--- a/documentation/first.tex
+++ b/documentation/first.tex
@@ -150,12 +150,12 @@ Product Backlog Refinement: Im Projektteam wird untersucht, inwieweit der im Pro
 \subsection{Auswahl Taiga.io}
 
 F"ur das Projektmanagement ist es wichtig eine geeignete Projektmanagementsoftware zu finden, die sich an die Bed"urfnisse
-des Softwareprojektes anpassen l"asst. Nach Recherchen und Austausch zwischen Kommolitonen und Arbeitskollegen wurde uns Taiga.io empfohlen. Taiga.io ist eine webbasierte Projektmanagement-Software mit der eine Projektdurchf"uhrung mit Scrum
-erm"oglicht. Integration mit Github ist ebenso m"oglich, wie die Einrichtung von Plugins, z.B. Chat-Programmen, wie HipChat und Slack.
+des Softwareprojektes anpassen l"asst. Nach Recherchen und Austausch mit Kommolitonen und Arbeitskollegen wurde uns Taiga.io empfohlen. Taiga.io ist eine webbasierte Projektmanagement-Software, die eine Projektdurchf"uhrung mit Scrum
+erm"oglicht. Integration von Github ist ebenso m"oglich, wie die Einrichtung von Plugins, z.B. Chat-Programmen, z.B HipChat oder Slack.
 
 \subsection{Einrichtung des Projektteams}
 
-Sobald die Registrierung in Taiga.io erfolgt ist gelangt man auf das allgemeine Dashboard, wor"uber die Projekte verwalten werden und die aktuellen Information eingesehen werden k"onnen.\newline
+Sobald die Registrierung in Taiga.io erfolgt ist, gelangt man auf das allgemeine Dashboard, wor"uber die Projekte verwalten werden und die aktuellen Informationen eingesehen werden k"onnen.\newline
 
 \begin{figure} [H]
 \begin{center}
@@ -167,7 +167,7 @@ Sobald die Registrierung in Taiga.io erfolgt ist gelangt man auf das allgemeine 
 \end{center}
 \end{figure}
 
-"Uber das Men"u "`MANAGE PROJECTS"' ist es m"oglich, alle Projekte zu verwalten und neue zu erstellen. Zur kostenlosen Nutzung ist die Erstellung eines privaten Projekts mit maximal vier Usern m"oglich oder beliebig viele "offentliche Projekte. Sobald das Projekt erstellt ist, k"onnen im Admin-Men"u User hinzugef"ugt und die entsprechenden Rollen im Scrum-Vorgehensmodell zugewiesen werden.
+"Uber das Men"u "`MANAGE PROJECTS"' ist es m"oglich, bestehende Projekte zu verwalten und neue Projekte anzulegen. Zur kostenlosen Nutzung ist die Erstellung eines privaten Projekts mit maximal vier Usern m"oglich oder beliebig viele "offentliche Projekte. Sobald das Projekt erstellt ist, k"onnen im Admin-Men"u User hinzugef"ugt und die entsprechenden Rollen im Scrum-Vorgehensmodell zugewiesen werden.
 
 \begin{figure} [H]
 \begin{center}
@@ -179,11 +179,11 @@ Sobald die Registrierung in Taiga.io erfolgt ist gelangt man auf das allgemeine 
 \end{center}
 \end{figure}
 
-Wir haben uns entschieden, dass alle Projektbeteiligten die Rolle Product Owner zugewiesen bekommen, da eine strikte Durchf"uhrung von Scrum nicht m"oglich war.
+Wir haben uns entschieden, allen Projektbeteiligten die Rolle Product Owner zuzuweisen, da eine strikte Durchf"uhrung von Scrum in einem kleinen Team kaum m"oglich ist.
 
 \subsection{Integration HipChat}
 
-Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns f"ur eine Chat-L"osung die sowohl als Windows-Applikation als auch als Smartphone-App verf"ugbar ist. F"ur die Durchf"uhrung des Projektes nutzten wir HipChat von Altlassian. Die Integration in Taiga.io funktioniert mit Hilfe eines Webhooks, der mit HipChat erzeugt wird und in Taiga.io integriert wird. Somit wird "uber s"amtliche Aktiviat"aten im HipChat benachrichtigt.
+Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns f"ur eine Chat-L"osung, die als Windows-Applikation und Smartphone-App verf"ugbar ist. F"ur die Durchf"uhrung des Projektes nutzten wir HipChat von Atlassian. Die Integration in Taiga.io funktioniert mit Hilfe eines Webhooks, der mit HipChat erzeugt wird und in Taiga.io integriert wird. Somit wird eine Benachrichtigung "uber s"amtliche Aktiviat"aten erm"oglicht.
 
 \begin{figure} [H]
 \begin{center}
@@ -194,8 +194,7 @@ Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns f"ur e
 \end{center}
 \end{figure}
 
-Zus"atzlich integrierten wir Github in den HipChat, um Aktivit"aten im GitHub als Information in den HipChat zu bringen.
-Dies ist n"utzlich, um "uber Commits oder Pushes im GitHub und "uber den aktualisierten Head benachrichtigt zu werden.
+Zus"atzlich integrierten wir Github in den HipChat, um "uber Commits und Pushes benachrichtigt zu werden.
 
 \begin{figure} [H]
 \begin{center}
@@ -210,7 +209,7 @@ Dies ist n"utzlich, um "uber Commits oder Pushes im GitHub und "uber den aktuali
 
 \subsection{Definition von User-Stories}
 
-User-Stories werden mit taiga.io im Backlog "uber "`NEW USER STORY"' erstellt. Nachdem die User-Story erstellt ist, kann die User-Story einem geplanten Sprint zugeordnet werden.
+User-Stories werden mit Taiga.io im Backlog "uber "`NEW USER STORY"' erstellt. Nachdem die User-Story erstellt ist, kann die User-Story einem geplanten Sprint zugeordnet werden.
 
 \begin{figure} [H]
 \begin{center}
@@ -226,7 +225,7 @@ Die definierten User-Stories sind unter dem Punkt 3.4 aufgef"uhrt.
 
 \subsection{Definition von Tasks}
 
-Die Tasks zu den User-Story werden im Sprinttaskboard erstellt und k"onnen via Drag \& Drop den Spalten "`New"', "`In Progress"', "`Ready for Test"', "`Closed"' oder "`Need Information"' zugewiesen werden. Somit ist eine "Ubersicht des Sprint im allgemeinen und des Fortschritt der Tasks ersichtlich.
+Die Tasks zu den User-Story werden im Sprinttaskboard erstellt und k"onnen via Drag \& Drop den Spalten "`New"', "`In Progress"', "`Ready for Test"', "`Closed"' oder "`Need Information"' zugewiesen werden. Somit ist eine "Ubersicht des Sprint im Allgemeinen und des Fortschritt der Tasks ersichtlich.
 
 \begin{figure} [H]
 \begin{center}
@@ -241,8 +240,7 @@ Die Tasks zu den User-Story werden im Sprinttaskboard erstellt und k"onnen via D
 
 \subsection{Sprintplanung}
 
-Zur Planung des Projektes haben wir sechs Sprint den Gesamtzeitraum des Projekts definiert. Jeder Sprint dauert zwei
-Wochen, dadurch soll gew"ahrleistet werden, dass der Sprint mit allen Vorgehensweisen des Scrum durchgef"uhrt werden kann.
+Zur Planung des Projektes haben wir sechs Sprint den Gesamtzeitraum des Projekts definiert. Jeder Sprint dauert zwei Wochen. Dadurch wird gew"ahrleistet, dass der Sprint mit allen Schritten der Iterationen durchgef"uhrt werden kann.
 
 \begin{figure} [H]
 \begin{center}
@@ -264,14 +262,12 @@ Wochen, dadurch soll gew"ahrleistet werden, dass der Sprint mit allen Vorgehensw
 
 \subsection{Retrospektive}
 
-Nachdem Abschluss eines Sprints fand ein Austausch
-bezüglich der Ergebnisse der geplanten Tasks statt.
-Aus der Retrospektive ergaben sich
-Verbesserungsvorschläge für das weitere Vorgehen,
-sowie für die Planung weiterer Sprint.
+Nach jedem Sprint tauschten wir uns
+bez"uglich unser Ergebnisse aus.
+Somit ergaben sich Verbesserungsvorschläge für das weitere Vorgehen,
+sowie für die Planung weiterer Sprints.
 Der Austausch ist wichtig, um Einsicht in die
-Aufgaben jedes einzelnen Teammitgliedes zu erhalten
-und dadurch auf Stand zu sein. Da jedes Teammitglied eine wichtige Rolle in der Retrospektive spielt, führte dies zu einem guten Teamwork. Durch das Besprechen von Problemen wurde Frust innerhalb des Team vermieden.
+Aufgaben jedes einzelnen Teammitgliedes zu erhalten. Die Retrospektive ist ein gutes Mittel, um alle Teammitglieder als Gruppe enger zusammen zu f"uhren. Konflikt innerhalb des Sprints wurden aufgezeigt, somit wurde Frust innerhalb des Teams vermieden.
 
 \chapter{Produktanforderungen}
 
@@ -398,7 +394,9 @@ NFU04 &	Das System soll gestestet werden.\\
 NFU05 &	Das System soll "uber ein Deployment verf"ugen.\\
 
 \hline
-NFU06 &	F"ur Das System soll Continious Integration implementiert werden.\\
+NFU06 &	F"ur Das System soll Continuous Integration konfiguriert werden.\\
+
+\hline
 
 \end{tabular}
 
@@ -677,7 +675,7 @@ Task \#36 & Konfiguration der Testumgebung\\
 \multicolumn{2}{|l|}{US09 - CI, Tests, Deploy, Dokumentation} \\
 
 \hline
-Task \#38 & Continious Integration konfigurieren (CircleCI)\\
+Task \#38 & Continuous Integration konfigurieren (CircleCI)\\
 
 \hline
 Task \#39 & Unit Tests schreiben\\
@@ -714,8 +712,6 @@ Eine dieser IDEs ist \textbf{WEBSTORM}, das kostenlos von \textbf{JETBRAINS} ang
 In der aktuellen Version 2017.1 wird WEBSTORM mit einer Reihe an n"utzlichen Tools und Kontrollmechanismen zur Verf"ugung gestellt. Dies beinhaltet unter anderem die Unterst"utzung aktueller Javascript Frameworks wie Angular, React, Vue.js und Meteor. Code-completion, Navigations- und „Ubersichtshilfen, Error-Erkennung und eingebaute Refactoring-Funktionen. \\
 
 Dar"uber hinaus lassen sich npm-Befehle direkt in Webstorm ausf"uhren und in einer eigenen Konsole anzeigen lassen. Weitere n"utzliche Funktionen sind die Anbindung g"angiger Version Control Systems wie Github oder das Erstellen und Ausf"uhren von Testszenarien, z.B. mittels Karma, Mocha, Jest and Protractor. \\
-
-\textbf{--- Relevante Webstorm-Aktionen/Libraries/Addons zu unserem Projekt einf"ugen} \\
 
 Bei der anderen IDE, die f"ur die Webapp verwendet wurde, handelt es sich um Atom, ein moderner und anpassbarer Text-Editor. \\
 
